module/core/variadic_from/tests/inc/compile_fail/test_too_many_args.rs
use variadic_from::from;

fn main()
{
  let _ = from!( 1, 2, 3, 4 );
}